--- a/distribution/conf/broker.conf
+++ b/distribution/conf/broker.conf
@@ -13,7 +13,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 
-brokerClusterName = DefaultCluster
+brokerClusterName = my_cluster
 brokerName = broker-a
 brokerId = 0
 deleteWhen = 04
